# QuadraticEquration

./: .gitignore  BigDecimal.cpp  BigDecimal.h  CMakeLists.txt  QuadraticSolver  README.md  main.cpp  run_tests.sh
inc/: QuadSolver.h
include/: UnsignedArith.h
src/: BigDecimal.cpp  QuadSolver.cpp  UnsignedArith.cpp
tests/: run_QuadSolver  test_BigDecimal.cpp  test_QuadSolver.cpp  test_UnsignedArith.cpp
